# GLuck

./: .gitignore  CMakeLists.txt  README.md
include/: linmath.h
include/glad/: glad.h
src/: glad.c  main.cpp
